--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,19 +4,24 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-Pos=699,496
+ViewportPos=1276,198
+ViewportId=0x3DD03744
+Pos=0,440
 Size=203,268
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=904,56
+ViewportPos=1276,198
+ViewportId=0x3DD03744
+Pos=205,0
 Size=370,708
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=699,56
+ViewportPos=1276,198
+ViewportId=0x3DD03744
 Size=203,438
 Collapsed=0
 DockId=0x00000004,0
@@ -63,7 +68,7 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000002 Pos=717,97 Size=575,708 Split=X
+DockNode      ID=0x00000002 Pos=1276,198 Size=575,708 Split=X
   DockNode    ID=0x00000001 Parent=0x00000002 SizeRef=203,657 Split=Y Selected=0x81F08B44
     DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=203,330 Selected=0x81F08B44
     DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=203,202 Selected=0xB61D20C0
