--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,25 +4,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-Pos=600,646
+ViewportPos=916,141
+ViewportId=0x3DD03744
+Pos=0,603
 Size=216,105
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=818,84
+ViewportPos=916,141
+ViewportId=0x3DD03744
+Pos=218,41
 Size=449,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=600,84
+ViewportPos=916,141
+ViewportId=0x3DD03744
+Pos=0,41
 Size=216,560
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=600,43
+ViewportPos=916,141
+ViewportId=0x3DD03744
 Size=667,39
 Collapsed=0
 DockId=0x00000006,0
@@ -70,7 +77,7 @@ Size=164,149
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=618,84 Size=667,708 Split=Y
+DockNode        ID=0x00000002 Pos=916,141 Size=667,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
