--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -175,7 +175,7 @@
     <ClInclude Include="CAnimation3DShader.h">
       <Filter>Source\08. ShaderCode\Compute\AnimationUpdate</Filter>
     </ClInclude>
-    <ClInclude Include="CAnim3D.h">
+    <ClInclude Include="CAnimClip.h">
       <Filter>Source\06. Component\7. Animator3D</Filter>
     </ClInclude>
     <ClInclude Include="CComponent.h">
@@ -372,7 +372,7 @@
     <ClCompile Include="CAnimation3DShader.cpp">
       <Filter>Source\08. ShaderCode\Compute\AnimationUpdate</Filter>
     </ClCompile>
-    <ClCompile Include="CAnim3D.cpp">
+    <ClCompile Include="CAnimClip.cpp">
       <Filter>Source\06. Component\7. Animator3D</Filter>
     </ClCompile>
     <ClCompile Include="CAnimation.cpp">
