--- a/Project/Engine/Engine.vcxproj
+++ b/Project/Engine/Engine.vcxproj
@@ -171,7 +171,7 @@ call EngineCopy.bat</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="CAnim2D.h" />
-    <ClInclude Include="CAnim3D.h" />
+    <ClInclude Include="CAnimClip.h" />
     <ClInclude Include="CAnimation.h" />
     <ClInclude Include="CAnimation3DShader.h" />
     <ClInclude Include="CAnimator2D.h" />
@@ -241,7 +241,7 @@ call EngineCopy.bat</Command>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CAnim2D.cpp" />
-    <ClCompile Include="CAnim3D.cpp" />
+    <ClCompile Include="CAnimClip.cpp" />
     <ClCompile Include="CAnimation.cpp" />
     <ClCompile Include="CAnimation3DShader.cpp" />
     <ClCompile Include="CAnimator2D.cpp" />
