--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,32 +4,25 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-ViewportPos=823,160
-ViewportId=0x3DD03744
-Pos=0,290
+Pos=595,328
 Size=216,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=823,160
-ViewportId=0x3DD03744
-Pos=218,41
+Pos=813,79
 Size=449,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=823,160
-ViewportId=0x3DD03744
-Pos=0,41
+Pos=595,79
 Size=216,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=823,160
-ViewportId=0x3DD03744
+Pos=595,38
 Size=667,39
 Collapsed=0
 DockId=0x00000006,0
@@ -76,8 +69,13 @@ Pos=40,339
 Size=164,149
 Collapsed=0
 
+[Window][AnimClip List##List]
+Pos=490,122
+Size=300,500
+Collapsed=0
+
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=823,160 Size=667,708 Split=Y
+DockNode        ID=0x00000002 Pos=613,79 Size=667,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
