--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -1,29 +1,36 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=77,70
 Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-Pos=595,328
-Size=216,418
+ViewportPos=717,104
+ViewportId=0x3DD03744
+Pos=0,290
+Size=180,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=813,79
-Size=449,667
+ViewportPos=717,104
+ViewportId=0x3DD03744
+Pos=182,41
+Size=373,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=595,79
-Size=216,247
+ViewportPos=717,104
+ViewportId=0x3DD03744
+Pos=0,41
+Size=180,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=595,38
-Size=667,39
+ViewportPos=717,104
+ViewportId=0x3DD03744
+Size=555,39
 Collapsed=0
 DockId=0x00000006,0
 
@@ -70,12 +77,13 @@ Size=164,149
 Collapsed=0
 
 [Window][AnimClip List##List]
-Pos=490,122
+ViewportPos=508,163
+ViewportId=0x461BAAB2
 Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=613,79 Size=667,708 Split=Y
+DockNode        ID=0x00000002 Pos=717,104 Size=555,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
