--- a/Project/Engine/Engine.vcxproj.filters
+++ b/Project/Engine/Engine.vcxproj.filters
@@ -202,6 +202,9 @@
     <ClInclude Include="CAnimClip.h">
       <Filter>Source\07. Resource\8. AnimClip</Filter>
     </ClInclude>
+    <ClInclude Include="..\Client\TestLevel.h">
+      <Filter>Default</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine.cpp">
