--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-ViewportPos=717,103
+ViewportPos=849,156
 ViewportId=0x3DD03744
 Pos=0,290
 Size=180,418
@@ -12,7 +12,7 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=717,103
+ViewportPos=849,156
 ViewportId=0x3DD03744
 Pos=182,41
 Size=373,667
@@ -20,7 +20,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=717,103
+ViewportPos=849,156
 ViewportId=0x3DD03744
 Pos=0,41
 Size=180,247
@@ -28,7 +28,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=717,103
+ViewportPos=849,156
 ViewportId=0x3DD03744
 Size=555,39
 Collapsed=0
@@ -77,13 +77,12 @@ Size=164,149
 Collapsed=0
 
 [Window][AnimClip List##List]
-ViewportPos=508,163
-ViewportId=0x461BAAB2
+Pos=490,122
 Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=717,103 Size=555,708 Split=Y
+DockNode        ID=0x00000002 Pos=849,156 Size=555,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
