사소한 수정

--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -76,6 +76,11 @@ Pos=40,339
 Size=164,149
 Collapsed=0
 
+[Window][AnimClip List##List]
+Pos=490,122
+Size=300,500
+Collapsed=0
+
 [Docking][Data]
 DockNode        ID=0x00000002 Pos=917,104 Size=667,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
