--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -9,37 +9,32 @@ Size=550,680
 Collapsed=1
 
 [Window][Content##Content]
-ViewportPos=640,-797
-ViewportId=0xA4D966FE
-Pos=0,149
-Size=240,406
+Pos=11,274
+Size=278,327
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=640,-797
-ViewportId=0xA4D966FE
-Pos=242,0
-Size=238,555
+Pos=291,153
+Size=278,448
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=640,-797
-ViewportId=0xA4D966FE
-Size=240,147
+Pos=11,153
+Size=278,119
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][AnimClip List##List]
-Pos=490,123
+Pos=490,122
 Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=640,-797 Size=480,555 Split=X
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=240,555 Split=Y Selected=0x81F08B44
+DockNode      ID=0x00000001 Pos=29,194 Size=558,448 Split=X
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=239,555 Split=Y Selected=0x81F08B44
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,147 Selected=0x81F08B44
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=240,406 Selected=0xB61D20C0
-  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=238,555 Selected=0xE5053174
+  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=239,555 Selected=0xE5053174
 
