--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -9,20 +9,20 @@ Size=550,680
 Collapsed=1
 
 [Window][Content##Content]
-Pos=9,273
-Size=278,327
+Pos=227,342
+Size=278,342
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=289,152
-Size=278,448
+Pos=507,136
+Size=278,548
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=9,152
-Size=278,119
+Pos=227,136
+Size=278,204
 Collapsed=0
 DockId=0x00000004,0
 
@@ -36,10 +36,15 @@ Pos=490,122
 Size=300,500
 Collapsed=0
 
+[Window][Material##List]
+Pos=490,122
+Size=300,500
+Collapsed=0
+
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=27,193 Size=558,448 Split=X
+DockNode      ID=0x00000001 Pos=245,177 Size=558,548 Split=X
   DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=239,555 Split=Y Selected=0x81F08B44
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,147 Selected=0x81F08B44
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=240,406 Selected=0xB61D20C0
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,204 Selected=0x81F08B44
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=240,342 Selected=0xB61D20C0
   DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=239,555 Selected=0xE5053174
 
