Animator Save/Load File 기능 추가
Animator가 가지고 있는 이벤트와 클립 정보를 저장하고 불러오는 기능 추가함

--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -9,19 +9,24 @@ Size=550,680
 Collapsed=1
 
 [Window][Content##Content]
-Pos=227,342
+ViewportPos=-894,249
+ViewportId=0xA4D966FE
+Pos=0,206
 Size=278,342
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=507,136
+ViewportPos=-894,249
+ViewportId=0xA4D966FE
+Pos=280,0
 Size=278,548
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=227,136
+ViewportPos=-894,249
+ViewportId=0xA4D966FE
 Size=278,204
 Collapsed=0
 DockId=0x00000004,0
@@ -42,7 +47,7 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=245,177 Size=558,548 Split=X
+DockNode      ID=0x00000001 Pos=-894,249 Size=558,548 Split=X
   DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=239,555 Split=Y Selected=0x81F08B44
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,204 Selected=0x81F08B44
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=240,342 Selected=0xB61D20C0
