--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,33 +4,33 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-ViewportPos=1346,275
+ViewportPos=1275,32
 ViewportId=0x3DD03744
-Pos=0,290
-Size=180,418
+Pos=0,494
+Size=317,715
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=1346,275
+ViewportPos=1275,32
 ViewportId=0x3DD03744
-Pos=182,41
-Size=373,667
+Pos=319,69
+Size=659,1140
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=1346,275
+ViewportPos=1275,32
 ViewportId=0x3DD03744
-Pos=0,41
-Size=180,247
+Pos=0,69
+Size=317,423
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1346,275
+ViewportPos=1275,32
 ViewportId=0x3DD03744
-Size=555,39
+Size=978,67
 Collapsed=0
 DockId=0x00000006,0
 
@@ -70,9 +70,7 @@ Size=300,500
 Collapsed=0
 
 [Window][Making New Mtrl]
-ViewportPos=1081,157
-ViewportId=0x3DD03744
-Pos=40,339
+Pos=1103,455
 Size=164,149
 Collapsed=0
 
@@ -81,12 +79,17 @@ Pos=490,122
 Size=300,500
 Collapsed=0
 
+[Window][Textrue##List]
+Pos=490,122
+Size=300,500
+Collapsed=0
+
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=1346,275 Size=555,708 Split=Y
+DockNode        ID=0x00000002 Pos=1275,32 Size=978,1209 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
+    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=303,657 Split=Y Selected=0x81F08B44
       DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=203,247 Selected=0x81F08B44
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=203,418 Selected=0xB61D20C0
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=449,657 Selected=0xE5053174
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=629,657 Selected=0xE5053174
 
