--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,33 +4,33 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-ViewportPos=964,50
+ViewportPos=1417,184
 ViewportId=0x3DD03744
-Pos=0,290
-Size=180,418
+Pos=0,384
+Size=269,556
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=964,50
+ViewportPos=1417,184
 ViewportId=0x3DD03744
-Pos=182,41
-Size=373,667
+Pos=271,54
+Size=558,886
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=964,50
+ViewportPos=1417,184
 ViewportId=0x3DD03744
-Pos=0,41
-Size=180,247
+Pos=0,54
+Size=269,328
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=964,50
+ViewportPos=1417,184
 ViewportId=0x3DD03744
-Size=555,39
+Size=829,52
 Collapsed=0
 DockId=0x00000006,0
 
@@ -81,8 +81,18 @@ Pos=490,122
 Size=300,500
 Collapsed=0
 
+[Window][New Level]
+Pos=508,337
+Size=264,94
+Collapsed=0
+
+[Window][Textrue##List]
+Pos=490,122
+Size=300,500
+Collapsed=0
+
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=964,50 Size=555,708 Split=Y
+DockNode        ID=0x00000002 Pos=1417,184 Size=829,940 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
