--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -9,7 +9,7 @@ Size=550,680
 Collapsed=1
 
 [Window][Content##Content]
-ViewportPos=826,-753
+ViewportPos=778,281
 ViewportId=0xA4D966FE
 Pos=0,206
 Size=278,342
@@ -17,7 +17,7 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=826,-753
+ViewportPos=778,281
 ViewportId=0xA4D966FE
 Pos=280,0
 Size=278,548
@@ -25,14 +25,15 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=826,-753
+ViewportPos=778,281
 ViewportId=0xA4D966FE
 Size=278,204
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][AnimClip List##List]
-Pos=490,122
+ViewportPos=508,163
+ViewportId=0x461BAAB2
 Size=300,500
 Collapsed=0
 
@@ -47,9 +48,9 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=826,-753 Size=558,548 Split=X
-  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=239,555 Split=Y Selected=0x81F08B44
+DockNode      ID=0x00000001 Pos=778,281 Size=558,548 Split=X
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=278,555 Split=Y Selected=0x81F08B44
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,204 Selected=0x81F08B44
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=240,342 Selected=0xB61D20C0
-  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=239,555 Selected=0xE5053174
+  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=278,555 Selected=0xE5053174
 
