문제 없는 선에서 커밋

--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -9,31 +9,25 @@ Size=550,680
 Collapsed=1
 
 [Window][Content##Content]
-ViewportPos=778,281
-ViewportId=0xA4D966FE
-Pos=0,206
+Pos=719,416
 Size=278,342
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=778,281
-ViewportId=0xA4D966FE
-Pos=280,0
+Pos=999,210
 Size=278,548
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=778,281
-ViewportId=0xA4D966FE
+Pos=719,210
 Size=278,204
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][AnimClip List##List]
-ViewportPos=508,163
-ViewportId=0x461BAAB2
+Pos=490,123
 Size=300,500
 Collapsed=0
 
@@ -48,7 +42,7 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode      ID=0x00000001 Pos=778,281 Size=558,548 Split=X
+DockNode      ID=0x00000001 Pos=966,-729 Size=558,548 Split=X
   DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=278,555 Split=Y Selected=0x81F08B44
     DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=240,204 Selected=0x81F08B44
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=240,342 Selected=0xB61D20C0
