--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,25 +4,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-Pos=701,319
+ViewportPos=1081,107
+ViewportId=0x3DD03744
+Pos=0,290
 Size=180,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=883,70
+ViewportPos=1081,107
+ViewportId=0x3DD03744
+Pos=182,41
 Size=373,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=701,70
+ViewportPos=1081,107
+ViewportId=0x3DD03744
+Pos=0,41
 Size=180,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=701,29
+ViewportPos=1081,107
+ViewportId=0x3DD03744
 Size=555,39
 Collapsed=0
 DockId=0x00000006,0
@@ -76,7 +83,7 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=719,70 Size=555,708 Split=Y
+DockNode        ID=0x00000002 Pos=1081,107 Size=555,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
