--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,26 +4,33 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-Pos=701,319
-Size=180,418
+ViewportPos=615,-855
+ViewportId=0x3DD03744
+Pos=0,290
+Size=291,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-Pos=883,70
-Size=373,667
+ViewportPos=615,-855
+ViewportId=0x3DD03744
+Pos=293,41
+Size=394,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-Pos=701,70
-Size=180,247
+ViewportPos=615,-855
+ViewportId=0x3DD03744
+Pos=0,41
+Size=291,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-Pos=701,29
-Size=555,39
+ViewportPos=615,-855
+ViewportId=0x3DD03744
+Size=687,39
 Collapsed=0
 DockId=0x00000006,0
 
@@ -38,8 +45,7 @@ Size=300,500
 Collapsed=0
 
 [Window][Mesh List##List]
-ViewportPos=508,163
-ViewportId=0xCAFD7655
+Pos=490,122
 Size=300,500
 Collapsed=0
 
@@ -76,11 +82,11 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=719,70 Size=555,708 Split=Y
+DockNode        ID=0x00000002 Pos=615,-855 Size=687,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
+    DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=291,657 Split=Y Selected=0x81F08B44
       DockNode  ID=0x00000004 Parent=0x00000001 SizeRef=203,247 Selected=0x81F08B44
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=203,418 Selected=0xB61D20C0
-    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=449,657 Selected=0xE5053174
+    DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=394,657 Selected=0xE5053174
 
