--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,33 +4,26 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-ViewportPos=982,108
-ViewportId=0x3DD03744
-Pos=0,290
-Size=180,418
+Pos=675,297
+Size=178,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=982,108
-ViewportId=0x3DD03744
-Pos=182,41
-Size=373,667
+Pos=855,48
+Size=369,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=982,108
-ViewportId=0x3DD03744
-Pos=0,41
-Size=180,247
+Pos=675,48
+Size=178,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=982,108
-ViewportId=0x3DD03744
-Size=555,39
+Pos=675,7
+Size=549,39
 Collapsed=0
 DockId=0x00000006,0
 
@@ -77,12 +70,13 @@ Size=164,149
 Collapsed=0
 
 [Window][AnimClip List##List]
-Pos=490,122
+ViewportPos=508,163
+ViewportId=0x461BAAB2
 Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=982,108 Size=555,708 Split=Y
+DockNode        ID=0x00000002 Pos=693,48 Size=549,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
