--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,5 @@ unity_*
 *.ini
 anjanath/anjanath_body_w_Anim.blend
 anjanath/anjanath_body_w_Anim.fbx
+OutputFile/bin/content/Level/Temp.lv
+OutputFile/bin/imgui.ini
