--- a/OutputFile/bin/imgui.ini
+++ b/OutputFile/bin/imgui.ini
@@ -4,33 +4,33 @@ Size=400,400
 Collapsed=0
 
 [Window][Content##Content]
-ViewportPos=701,-752
+ViewportPos=1313,183
 ViewportId=0x3DD03744
 Pos=0,290
-Size=178,418
+Size=298,418
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Inspector##Inspector]
-ViewportPos=701,-752
+ViewportPos=1313,183
 ViewportId=0x3DD03744
-Pos=180,41
-Size=369,667
+Pos=300,41
+Size=620,667
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Outliner##Outliner]
-ViewportPos=701,-752
+ViewportPos=1313,183
 ViewportId=0x3DD03744
 Pos=0,41
-Size=178,247
+Size=298,247
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=701,-752
+ViewportPos=1313,183
 ViewportId=0x3DD03744
-Size=549,39
+Size=920,39
 Collapsed=0
 DockId=0x00000006,0
 
@@ -70,9 +70,7 @@ Size=300,500
 Collapsed=0
 
 [Window][Making New Mtrl]
-ViewportPos=1081,157
-ViewportId=0x3DD03744
-Pos=40,339
+Pos=1103,455
 Size=164,149
 Collapsed=0
 
@@ -83,7 +81,7 @@ Size=300,500
 Collapsed=0
 
 [Docking][Data]
-DockNode        ID=0x00000002 Pos=701,-752 Size=549,708 Split=Y
+DockNode        ID=0x00000002 Pos=1313,183 Size=920,708 Split=Y
   DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=575,39 Selected=0xE87781F4
   DockNode      ID=0x00000007 Parent=0x00000002 SizeRef=575,667 Split=X
     DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=216,657 Split=Y Selected=0x81F08B44
