--- a/Project/Script/Script.vcxproj
+++ b/Project/Script/Script.vcxproj
@@ -175,6 +175,7 @@ call CodeGen.exe</Command>
     <ClInclude Include="CCameraMoveScript.h" />
     <ClInclude Include="CCharacterMoveScript.h" />
     <ClInclude Include="CGravityScript.h" />
+    <ClInclude Include="CIdleStateScript.h" />
     <ClInclude Include="CMissileScript.h" />
     <ClInclude Include="CMonsterScript.h" />
     <ClInclude Include="CPlanetScript.h" />
@@ -184,11 +185,14 @@ call CodeGen.exe</Command>
     <ClInclude Include="CTestScript.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="CPlayerScriptFsm.h" />
+    <ClInclude Include="CStateScript.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CCameraMoveScript.cpp" />
     <ClCompile Include="CCharacterMoveScript.cpp" />
     <ClCompile Include="CGravityScript.cpp" />
+    <ClCompile Include="CIdleStateScript.cpp" />
     <ClCompile Include="CMissileScript.cpp" />
     <ClCompile Include="CMonsterScript.cpp" />
     <ClCompile Include="CPlanetScript.cpp" />
@@ -202,7 +206,9 @@ call CodeGen.exe</Command>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="CPlayerScriptFsm.cpp" />
     <ClCompile Include="Script.cpp" />
+    <ClCompile Include="CStateScript.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
